<resources>
    <string name="app_name">Venture</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="play_game">Play Game</string>
    <string name="home">Home</string>
    <string name="chat">Home</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="password_visible_content_description">Hide password</string>
    <string name="password_hidden_content_description">Show password</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_password">رمز عبور</string>
    <string name="hint_confirm_password">تکرار رمز عبور</string>
    <string name="register">ثبت نام</string>
    <string name="already_have_an_account">حساب کاربری دارید؟</string>
    <string name="don_not_have_an_account_yet">حساب کاربری ندارید؟</string>
    <string name="sign_up">ثبت نام کنید</string>
    <string name="sign_in">وارد شوید</string>
    <string name="error_couldnt_reach">سرور در دسترس نیست</string>
    <string name="oops_something_went_wrong">خطای نا مشخص</string>
    <string name="successfully_registered_an_account">ثبت نام با موفقیت انجام شد</string>
    <string name="error_field_empty">این فیلد نمی تواند خالی باشد</string>
    <string name="invalid_email">این ایمیل معتبر نیست</string>
    <string name="password_are_not_same">رمز عبور یکسان نیست!</string>
    <string name="input_too_short">رمزعبور حداقل باید شامل %d کاراکتر باشد</string>
    <string name="invalid_password">رمز عبور باید حداقل دارای یک حرف بزرگ و یک عدد باشد</string>
    <string name="login">ورود</string>
    <string name="your_feed">صفحه اصلی</string>
    <string name="back">بازگشت</string>
    <string name="unlike">Unlike</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="read_more">بیشتر</string>
    <string name="liked_by_x_people">توسط %d نفر لایک شده است</string>
    <string name="x_comments">%d دیدگاه</string>
</resources>